--- a/BoardOracle/src/main/resources/templates/master/sysManage.html
+++ b/BoardOracle/src/main/resources/templates/master/sysManage.html
@@ -80,7 +80,12 @@
 					<li><a href="/master/numberReply">댓글 갯수</a></li>
 				</ul>
 			</li>
-			<li><a href="/master/fileList">첨부파일</a></li>
+			<li><a href="">첨부파일</a>
+				<ul class="sub_menu">
+					<li><a href="/master/fileModify">첨부 파일 수정</a></li>
+					<li><a href="/master/fileDelete">첨부 파일 삭제</a></li>
+				</ul>
+			</li>
 			<li><a href="">게시판관리</a></li>
 			<li><a href="">시스템정보</a></li>
 		</ul>
