--- a/BoardOracle/src/main/resources/templates/master/sysManage.html
+++ b/BoardOracle/src/main/resources/templates/master/sysManage.html
@@ -87,7 +87,7 @@
 				</ul>
 			</li>
 			<li><a href="">게시판관리</a></li>
-			<li><a href="">시스템정보</a></li>
+			<li><a href="/master/systemInfo">시스템정보</a></li>
 		</ul>
 	</div>
 </body>
