--- a/BoardOracle/src/main/resources/templates/master/sysManage.html
+++ b/BoardOracle/src/main/resources/templates/master/sysManage.html
@@ -3,71 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>관리자 페이지</title>
+<link href="/css/style.css" rel="stylesheet">
 
-<style>
-	.menubar {
-		width: 100%;
-		height: auto;
-		background-color: #168;
-		position: fixed;
-		top: 0;
-		left: 0;
-		right: 0;
-		text-align: center;
-	}
-	
-	.menubar a:link, a:visited, a:active {
-		color: white;
-	}
-	
-	.menubar a {
-		display: block;
-		text-decoration: none;
-	}
-	
-	.menubar .main_menu > li {
-		float: left;
-		width: 20%;
-		height: 100%;
-		line-height: 50px;
-		list-style: none;
-		font-weight: bold;
-		position: relative;
-		margin: 0px;
-	}
-	
-	.menubar .main_menu > li > a:hover {
-		background-color: #f0f6f9;
-		color: #168;
-		font-weight: bold;
-	}
-	
-	.menubar .main_menu .sub_menu {
-		list-style: none;
-		display: none;
-		position: absolute;
-		padding-left: 0;
-		padding-right: 0;
-		background-color: #c7d1db;
-		width: 100%;
-		box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.2);
-	}
-	
-	.menubar .main_menu > li:hover .sub_menu {
-		display: block;
-	}
-	
-	.sub_menu a {
-		color: block;
-		padding: 8px;
-		text-decoration: none;
-		display: block;
-	}
-	
-	.sub_menu a:hover {
-		background-color: #4675a4;
-	}
-</style>
 </head>
 <body>
 	<div class="menubar">
@@ -86,7 +23,7 @@
 					<li><a href="/master/fileDelete">첨부 파일 삭제</a></li>
 				</ul>
 			</li>
-			<li><a href="">게시판관리</a></li>
+			<li><a href="/master/boardManage">게시판관리</a></li>
 			<li><a href="/master/systemInfo">시스템정보</a></li>
 		</ul>
 	</div>
