--- a/BoardOracle/src/main/resources/templates/member/memberWithdrawCheck.html
+++ b/BoardOracle/src/main/resources/templates/member/memberWithdrawCheck.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>회원 탈퇴 확인</title>
+<script src="/js/getCookie.js"></script>
 </head>
 <body>
 	<div id="main">
@@ -34,6 +35,7 @@
 			.then((data) => {
 				if(data.message == 'GOOD') {
 					console.log(data.message)
+					logout();
 					document.location.href="/member/memberWithdraw";
 				}else {
 					alert("해당 조건에 맞는 아이디가 존재하지 않습니다.");
@@ -42,6 +44,20 @@
 				console.log("error = " + error);
 				alert("에러가 발생하였습니다.");
 			})
+	}
+	
+	const logout = () => {
+		let authkey = getCookie('authkey');
+		let userid = getCookie('userid');
+		let password = getCookie('password');
+		if(authkey != undefined)
+			document.cookie = 'authkey=' + authkey + ";path=/;max-age=0";
+		if(userid != undefined)
+			document.cookie = 'userid=' + authkey + ";path=/;max-age=0";
+		if(password != undefined)
+			document.cookie = 'password=' + authkey + ";path=/;max-age=0";
+			
+		document.location.href = '/member/memberSessionOut'
 	}
 </script>
 </html>
