--- a/BoardOracle/src/main/resources/templates/board/view.html
+++ b/BoardOracle/src/main/resources/templates/board/view.html
@@ -291,7 +291,7 @@
     		const data = {
    				replywriter: replywriter.value,
    				replycontent: replycontent.value,
-   				userid: '[[${session.userid}]]',
+   				userid: userid.value,
    				seqno: seqno.value
     		}
     		
