--- a/BoardOracle/src/main/resources/templates/board/list.html
+++ b/BoardOracle/src/main/resources/templates/board/list.html
@@ -40,12 +40,12 @@
     <div class="main">
 
         <img src="/images/logo.jpg" id="topBanner"><br>
-        <h1 style="text-align:center;">게시물 목록</h1>	
+        <h1 class="title" style="text-align:center;">게시물 목록</h1>	
         <input type="text" name="keyword" id="keyword"
-        		style="width:25%; height:30px; border:2px solid #168; font-size:16px"
+        		style="width:25%; height:30px; border:2px solid darksalmon; font-size:16px"
         		placeholder="검색할 제목, 작성자 이름 및 내용을 입력하세요." onkeydown="press()">
         <input type="button" value="검색"
-        		style="width:5%; height:30px; background:#158; color:white; font-weight:bold; cursor:pointer;"
+        		style="width:5%; height:30px; background:white; color:darksalmon; font-weight:bold; cursor:pointer; outline:auto"
         		onclick="search()">
         <br><br>
         <table class="InfoTable">
