--- a/BoardOracle/src/main/resources/templates/board/modify.html
+++ b/BoardOracle/src/main/resources/templates/board/modify.html
@@ -275,7 +275,7 @@
 	
     <div class = "main">
         <img src="/images/logo.jpg" id="topBanner"><br>
-        <h1>게시물 등록</h1>
+        <h1 class="title">게시물 등록</h1>
         <br>
         <div id="formZone">
             <form class="ModifyForm" name="ModifyForm" method="post" enctype="application/x-www-form-urlencoded">
