--- a/BoardOracle/src/main/resources/templates/board/write.html
+++ b/BoardOracle/src/main/resources/templates/board/write.html
@@ -271,7 +271,7 @@
 
     <div class = "main">
         <img src="/images/logo.jpg" class="topBanner"><br>
-        <h1>게시물 등록</h1>
+        <h1 class="title">게시물 등록</h1>
         <br>
         <div id="formZone">
             <form class="WriteForm" name="WriteForm" method="post">
