--- a/BoardOracle/src/main/resources/templates/master/boardManage.html
+++ b/BoardOracle/src/main/resources/templates/master/boardManage.html
@@ -41,7 +41,7 @@
 <body>
 	
 	<form id="boardManage" class="container">
-	  <input type="text" name="postNum" class="postNum" id="postNum" placeholder="한 화면에 보여지는 게시물 행 갯수를 조절하세요" />
+	  <input type="text" name="postNum" class="postNum" id="postNum" placeholder="한 화면에 보여지는 게시물 행 갯수(1~10)를 조절하세요" />
 	  <button type="button" id="submitButton" onclick="submit1()">전송</button>
 	</form>
 	<div class="menubar">
