--- a/BoardOracle/src/main/resources/templates/member/memberWithdrawCheck.html
+++ b/BoardOracle/src/main/resources/templates/member/memberWithdrawCheck.html
@@ -9,7 +9,7 @@
 	<div id="main">
 		<div id="LogoutView">
 			<form id="IdCheck" class="IdCheck" name="IdCheck">
-				<h1>회원 탈퇴하시려면 로그인 아이디를 입력해 주세요 </h1>
+				<h1 class="title">회원 탈퇴하시려면 로그인 아이디를 입력해 주세요 </h1>
 				<input type="text" class="input_field" id="userid" name="userid" placeholder="여기에 아이디를 입력해 주세요.">
 	            <input type="button" class="btn_write" value="탈퇴" onclick="IdCheckfunction()">
 	            <a href="/member/memberInfo"><button class="btn_cancel" value="취소">취소</button></a>
