--- a/BoardOracle/src/main/resources/templates/member/pwCheckNotice.html
+++ b/BoardOracle/src/main/resources/templates/member/pwCheckNotice.html
@@ -13,7 +13,7 @@
 	</div>
 	
 	<div class="ModifyForm">
-	<h1>패스워드를 변경해 주세요.</h1><br>
+	<h1 class="title">패스워드를 변경해 주세요.</h1><br>
 	<input type="button" class="btn_write" value="30일 후에 변경" onclick="">
 	<input type="button" class="btn_cancel" value="지금 변경" onclick="">
 	</div>
