--- a/BoardOracle/src/main/resources/static/css/style.css
+++ b/BoardOracle/src/main/resources/static/css/style.css
@@ -65,7 +65,7 @@ a:active { color: red; }
 	margin-bottom:40px;
 	width: 80%;
 	height: 40px;
-	background: linear-gradient(125deg, #81ecec, #6c5ce7, #81ecec);
+	background: linear-gradient(125deg, bisque, #6c5ce7, darksalmon);
 	background-position: left;
 	background-size: 200%;
 	color: white;
@@ -74,31 +74,6 @@ a:active { color: red; }
 	cursor: pointer;
 	transition: 0.4s;
 	display: inline;
-}
-
-
-.imageZone {
-	border: 2px solid #92AAB0;
-	width: 60%;
-	height: auto;
-	color: #92AAB0;
-	vertical-align: middle;
-	margin: auto;
-	padding: 10px 10px;
-	font-size: 200%;
-}
-
-.addrSearch {
-	width: 80%;
-	border: none;
-	border-bottom: 2px solid #adadad;
-	margin: 5px;
-	padding: 10px 10px;
-	outline: none;
-	color: #636e72;
-	font-size: 16px;
-	height: 25px;
-	background: none;
 }
 
 #LogoutView{
@@ -174,31 +149,8 @@ a:active { color: red; }
 .navi_top {	width: 1350px; text-align: right; }
 .navi_bottom { text-align: center; }
 
-.boardView {
-  width:60%;
-  height:auto;
-  margin:auto;
-  text-align: left;
-  padding: 20px, 20px;
-  background-color:#FFFFFF;
-  border:4px solid gray;
-  border-radius: 20px;
-}
-
 .main {
   text-align: center;
-}
-
-.field {
-  width: 90%;
-  height:25px;
-  outline:none;
-  color: #636e72;
-  font-size:16px;
-  background: none;
-  border-bottom: 2px solid #adadad;
-  margin: 30px;
-  padding: 10px 10px;
 }
 
 .content {
@@ -214,71 +166,6 @@ a:active { color: red; }
   resize: both;
 }
 
-.WriteForm {
-  width:50%;
-  height:auto;
-  margin: auto;
-  padding: 20px, 20px;
-  text-align: left;
-  background-color:#FFFFFF;
-  text-align: center;
-  border:4px solid gray;
-  border-radius: 30px;
-}
-
-.ModifyForm {
-  width:60%;
-  height:auto;
-  margin: auto;
-  padding: 20px, 20px;
-  text-align: left;
-  background-color:#FFFFFF;
-  text-align: center;
-  border:4px solid gray;
-  border-radius: 30px;
-}
-
-.input_field {
-  width: 90%;
-  border:none;
-  border-bottom: 2px solid #adadad;
-  margin: 10px;
-  padding: 10px;
-  outline:none;
-  color: #636e72;
-  font-size:16px;
-  height:25px;
-  background: none;
-}
-
-.input_content{
-  width: 90%;
-  height: 300px;
-  padding: 10px;
-  box-sizing: border-box;
-  border: solid #adadad;
-  font-size: 16px;
-  resize: both;
-}
-
-.btn_modify  {
-  position:relative;
-  left:20%;
-  transform: translateX(-50%);
-  margin-top: 20px;
-  margin-bottom: 10px;
-  width:40%;
-  height:40px;
-  background: red;
-  background-position: left;
-  background-size: 200%;
-  color:white;
-  font-weight: bold;
-  border:none;
-  cursor:pointer;
-  transition: 0.4s;
-  display:inline;
-}
 
 .btn_delete  {
   position:relative;
@@ -307,7 +194,7 @@ a:active { color: red; }
   margin-bottom: 10px;
   width:40%;
   height:40px;
-  background: red;
+  background: darksalmon;
   background-position: left;
   background-size: 200%;
   color:white;
@@ -326,7 +213,7 @@ a:active { color: red; }
   margin-bottom: 10px;
   width:40%;
   height:40px;
-  background: pink;
+  background: bisque;
   background-position: left;
   background-size: 200%;
   color:white;
@@ -335,6 +222,7 @@ a:active { color: red; }
   cursor:pointer;
   transition: 0.4s;
   display:inline;
+  margin-left: 10px;
 }
 
 .bottom_menu {
@@ -380,7 +268,7 @@ a:active { color: red; }
 	padding: 20px, 20px;
 	background-color:#FFFFFF;
 	text-align: center;
-	border: 5px solid gray;
+	border: 5px solid #F5B27F;
 	border-radius: 30px;
 }
 
@@ -403,7 +291,7 @@ a:active { color: red; }
 	margin-bottom:40px;
 	width: 80%;
 	height: 40px;
-	background: linear-gradient(125deg, #81ecec, #6c5ce7, #81ecec);
+	background: linear-gradient(125deg, bisque, darksalmon, brown);
 	background-position: left;
 	background-size: 200%;
 	color: white;
@@ -416,7 +304,7 @@ a:active { color: red; }
 
 
 .imageZone {
-	border: 2px solid #92AAB0;
+	border: 2px solid #F5B27F;
 	width: 60%;
 	height: auto;
 	color: #92AAB0;
@@ -429,7 +317,7 @@ a:active { color: red; }
 .addrSearch {
 	width: 80%;
 	border: none;
-	border-bottom: 2px solid #adadad;
+	border-bottom: 2px solid #F5B27F;
 	margin: 5px;
 	padding: 10px 10px;
 	outline: none;
@@ -485,13 +373,13 @@ a:active { color: red; }
 
 .InfoTable {
       border-collapse: collapse;
-      border-top: 3px solid #168;
+      border-top: 3px solid darksalmon;
       width: 800px;  
       margin-left: auto; margin-right: auto;
     }  
     .InfoTable th {
-      color: #168;
-      background: #f0f6f9;
+      color: darksalmon;
+      background: antiquewhite;
       text-align: center;
     }
     .InfoTable th, .InfoTable td {
@@ -519,23 +407,22 @@ a:active { color: red; }
   text-align: left;
   padding: 20px, 20px;
   background-color:#FFFFFF;
-  border:4px solid gray;
+  border:3px solid #F5B27F;
   border-radius: 20px;
-}
-
-.main {
-  text-align: center;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .field {
-  width: 90%;
+  width: 85%;
   height:25px;
   outline:none;
   color: #636e72;
   font-size:16px;
   background: none;
-  border-bottom: 2px solid #adadad;
-  margin: 30px;
+  border-bottom: 2px solid #F5C67F;
+  margin: 15px;
   padding: 10px 10px;
 }
 
@@ -553,14 +440,14 @@ a:active { color: red; }
 }
 
 .WriteForm {
-  width:50%;
+  width:60%;
   height:auto;
   margin: auto;
   padding: 20px, 20px;
   text-align: left;
   background-color:#FFFFFF;
   text-align: center;
-  border:4px solid gray;
+  border:3px solid #F5B27F;
   border-radius: 30px;
 }
 
@@ -572,14 +459,14 @@ a:active { color: red; }
   text-align: left;
   background-color:#FFFFFF;
   text-align: center;
-  border:4px solid gray;
+  border:3px solid #F5B27F;
   border-radius: 30px;
 }
 
 .input_field {
-  width: 90%;
+  width: 85%;
   border:none;
-  border-bottom: 2px solid #adadad;
+  border-bottom: 2px solid #F5B27F;
   margin: 10px;
   padding: 10px;
   outline:none;
@@ -590,13 +477,15 @@ a:active { color: red; }
 }
 
 .input_content{
-  width: 90%;
+  width: 85%;
   height: 300px;
   padding: 10px;
   box-sizing: border-box;
-  border: solid #adadad;
+  border: solid #F5C67F;
   font-size: 16px;
   resize: both;
+  margin: 15px;
+  margin-bottom: 30px;
 }
 
 .btn_modify  {
@@ -645,7 +534,7 @@ a:active { color: red; }
   margin-bottom: 10px;
   width:40%;
   height:40px;
-  background: red;
+  background: darksalmon;
   background-position: left;
   background-size: 200%;
   color:white;
@@ -664,7 +553,7 @@ a:active { color: red; }
   margin-bottom: 10px;
   width:40%;
   height:40px;
-  background: pink;
+  background: bisque;
   background-position: left;
   background-size: 200%;
   color:white;
@@ -690,14 +579,14 @@ a:active { color: red; }
 }
 
 .bottom_menu > a:hover, .bottom_menu > a:active {
-	background-color: #1E90FF;
+	background-color: bisque;
 	text-decoration: none;
 }
 
 .menubar {
 	width: 100%;
 	height: auto;
-	background-color: #168;
+	background-color: darksalmon;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -708,6 +597,7 @@ a:active { color: red; }
 .menubar a {
 	display: block;
 	text-decoration: none;
+	color:white;
 }
 
 .menubar .main_menu > li {
@@ -722,8 +612,8 @@ a:active { color: red; }
 }
 
 .menubar .main_menu > li > a:hover {
-	background-color: #f0f6f9;
-	color: #168;
+	background-color: bisque;
+	color: darksalmon;
 	font-weight: bold;
 }
 
@@ -733,7 +623,7 @@ a:active { color: red; }
 	position: absolute;
 	padding-left: 0;
 	padding-right: 0;
-	background-color: #c7d1db;
+	background-color: darksalmon;
 	width: 100%;
 	box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.2);
 }
@@ -750,5 +640,9 @@ a:active { color: red; }
 }
 
 .sub_menu a:hover {
-	background-color: #4675a4;
+	background-color: bisque;
+}
+
+.title {
+	color: darksalmon;
 }
