--- a/BoardOracle/src/main/resources/templates/board/view.html
+++ b/BoardOracle/src/main/resources/templates/board/view.html
@@ -6,10 +6,6 @@
     <link href="/css/style.css" rel="stylesheet">
 
 <style>
-	.textArea {
-		display: flex;
-		justify-content: center;
-	}
 	
 	.replyDiv {
 	  width: 60%;
@@ -97,7 +93,7 @@
 
     <div class="main">
         <img src="/images/logo.jpg" class="topBanner"><br>
-        <h1 style="text-align:center;">게시물 내용 보기</h1>
+        <h1 class="title" style="text-align:center;">게시물 내용 보기</h1>
         <br>
         
         <div class = "boardView">
@@ -105,7 +101,7 @@
    			<div class="field" th:text="'제목 : ' + ${view.title}"></div>
             <!-- <div class="items_v">날짜 : ${view.regdate}</div> -->
             <div class="field" th:text="${#temporals.format(view.regdate,'yyyy-MM-dd HH:mm:ss')}"></div>
-            <div class="textArea"><pre class="input_content" th:text="'내용 : ' + ${view.content}"></pre></div>
+            <pre class="input_content" th:text="'내용 : ' + ${view.content}"></pre>
 
 	        <div th:each="file:${fileInfoView}"  class="field">
 	        	파일명 : <a th:href="@{'/board/fileDownload?fileseqno=' + ${file.fileseqno}}"
