--- a/BoardOracle/src/main/resources/templates/member/memberInfo.html
+++ b/BoardOracle/src/main/resources/templates/member/memberInfo.html
@@ -5,16 +5,6 @@
  <link href="/css/style.css" rel="stylesheet">
 <title>Insert title here</title>
 <style>
-	.field {
-         width: 90%;
-         border:none;
-         border-bottom: 2px solid gray;
-         padding:10px;
-         outline : none;
-         color: #636e72;
-         height: 25px;
-         background: none;
-     }
 	.input_content{
 	  width: 90%;
 	  height: 300px;
@@ -23,7 +13,10 @@
 	  border: solid #adadad;
 	  font-size: 16px;
 	  resize: both;
-	
+	}
+	.bottom_menu {
+		display: flex;
+    	justify-content: center;
 	}
 </style>
  <link href="/css/style.css" rel="stylesheet">
@@ -52,26 +45,27 @@
 
 
 	<div class="boardView">
+		<h1 class="title">사용자 관리</h1>
 		<div style="width:70%; height:auto; margin:auto; padding:20px; border:none;">
 			<img th:src="@{'/profile/' + ${memberInfo.stored_filename}}" style="display:block; width:80%; height:auto; margin:auto;" >
 		</div>
-		<div class="items" th:text="|아이디 : ${memberInfo.userid}|"></div>
-		<div class="items" th:text="|이름 : ${memberInfo.username}|"></div>
-		<div class="items" th:text="|직업 : ${memberInfo.job}|"></div>
-		<div class="items" th:text="|성별 : ${memberInfo.gender}|"></div>
-		<div class="items" th:text="|취미 : ${memberInfo.hobby}|"></div>
-		<div class="items" th:text="|전화번호 : ${memberInfo.telno}|"></div>
-		<div class="items" th:text="|이메일 : ${memberInfo.email}|"></div>
-		<div class="items" th:text="|가입일자 : ${memberInfo.regdate}|"></div>
-		<div class="items" th:text="|최종 로그인 날짜 : ${memberInfo.lastlogindate}|"></div>
-		<div class="items" th:text="|최종 로그아웃 날짜 : ${memberInfo.lastlogoutdate}|"></div>
-		<div class="items" th:text="|최종 패스워드 변경일 : ${memberInfo.lastpwdate}|"></div>
+		<div class="field" th:text="|아이디 : ${memberInfo.userid}|"></div>
+		<div class="field" th:text="|이름 : ${memberInfo.username}|"></div>
+		<div class="field" th:text="|직업 : ${memberInfo.job}|"></div>
+		<div class="field" th:text="|성별 : ${memberInfo.gender}|"></div>
+		<div class="field" th:text="|취미 : ${memberInfo.hobby}|"></div>
+		<div class="field" th:text="|전화번호 : ${memberInfo.telno}|"></div>
+		<div class="field" th:text="|이메일 : ${memberInfo.email}|"></div>
+		<div class="field" th:text="|가입일자 : ${memberInfo.regdate}|"></div>
+		<div class="field" th:text="|최종 로그인 날짜 : ${memberInfo.lastlogindate}|"></div>
+		<div class="field" th:text="|최종 로그아웃 날짜 : ${memberInfo.lastlogoutdate}|"></div>
+		<div class="field" th:text="|최종 패스워드 변경일 : ${memberInfo.lastpwdate}|"></div>
 		
 		<th:block th:if="${memberInfo.role == 'USER'}">
-			<div class="items">회원 권한 : 일반 권한</div>
+			<div class="field">회원 권한 : 일반 권한</div>
 		</th:block>
 		<th:block th:if="${memberInfo.role == 'MASTER'}">
-			<div class="items">회원 권한 : 관리자</div>
+			<div class="field">회원 권한 : 관리자</div>
 		</th:block>
 		<div class="input_content"><pre th:text="|내용 : ${memberInfo.description}|"></pre></div>
     </div>
