--- a/BoardOracle/src/main/resources/templates/member/memberPasswordModify.html
+++ b/BoardOracle/src/main/resources/templates/member/memberPasswordModify.html
@@ -92,7 +92,7 @@
 
 <div class="main">
 	<div class="ModifyForm">
-		<h1>패스워드 변경</h1>
+		<h1 class="title">패스워드 변경</h1>
 		<form name="modifyForm" id="modifyForm" method="POST">
 			<input type="password" id="old_password" name="old_password" 
 				class="input_field" placeholder="기존 패스워드를 입력하세요" >
