--- a/BoardOracle/src/main/resources/templates/member/memberWithdraw.html
+++ b/BoardOracle/src/main/resources/templates/member/memberWithdraw.html
@@ -9,7 +9,7 @@
 	<br><br>
 	<div id="main">
 		<div id="LogoutView">
-			<h1>로그아웃하였습니다. <span th:text="|${userid} ${username}|"></span>님 회원 탈퇴 되셨습니다.</h1>
+			<h1 class="title">로그아웃하였습니다. <span th:text="|${userid} ${username}|"></span>님 회원 탈퇴 되셨습니다.</h1>
 			<h1>다시 로그인으로 돌아가시려면 <a href="/">여기</a>를 클릭해 주세요</h1>
 		</div>
 	</div>
