--- a/BoardOracle/src/main/resources/templates/member/searchID.html
+++ b/BoardOracle/src/main/resources/templates/member/searchID.html
@@ -51,7 +51,7 @@
 		
 		<div class="ModifyForm">
 			<form name="IDSearchForm" id="IDSearchForm" class="IDSearchForm" method="POST">		
-				<h1>아이디 찾기</h1>
+				<h1 class="title">아이디 찾기</h1>
 				<div class="IDSearchFormDivision">
 					<input type="text" id="username" name="username" class="input_field" placeholder="이름을 입력하세요" >
 					<input type="text" id="telno" name="telno" class="input_field" onkeydown="press(this.form)" placeholder="전화번호를 입력하세요" >
