--- a/BoardOracle/src/main/resources/templates/member/searchPassword.html
+++ b/BoardOracle/src/main/resources/templates/member/searchPassword.html
@@ -52,7 +52,7 @@ const pwSearchCheck = async () => {
 		</div>
 			<div class="ModifyForm">
 				<form name="pwSearchForm" id="pwSearchForm" class="pwSearchForm" method="POST">		
-					<h1>비밀번호 발급</h1>
+					<h1 class="title">비밀번호 발급</h1>
 					<div class="pwSearchFormDivision">
 						<input type="text" id="userid" name="userid" class="input_field" placeholder="아이디를 입력하세요" >
 						<input type="text" id="telno" name="telno" class="input_field" onkeydown="press(this.form)" placeholder="전화번호를 입력하세요" >
