--- a/BoardOracle/src/main/resources/templates/member/signup.html
+++ b/BoardOracle/src/main/resources/templates/member/signup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="main">
-		<h1>회원 등록</h1><br>
+		<h1 class="title">회원 등록</h1><br>
 		<div class="WriteForm">
 			<form id="RegistryForm" name="RegistryForm" method="POST" enctype="multipart/form-data">
 				<br><br>
@@ -19,7 +19,7 @@
 				<input type="text" class="input_field" id="username" name="username" placeholder="여기에 이름을 입력해 주세요.">
 				<input type="password" class="input_field" id="password" name="password" placeholder="여기에 패스워드를 입력해 주세요.">
 				<input type="password" class="input_field" id="password1" name="password1" placeholder="여기에 패스워드를 한 번 더 입력해 주세요.">
-				<div style="width:90%; text-align:left; position:relative; left: 35px; border-bottom: 2px solid #adadad; margin: 10px; padding:10px;">
+				<div style="width:90%; text-align:left; position:relative; left: 35px; border-bottom: 2px solid #F5B27F; margin: 10px; padding:10px;">
 					성별 : 
 					<label><input type="radio" name="gender" value="남성">남성</label>
 					<label><input type="radio" name="gender" value="여성">여성</label><br>
@@ -46,8 +46,7 @@
 				<input type="text" id="telno" class="input_field" name="telno" placeholder="전화번호를 입력하세요.">
 				<input type="text" id="email" class="input_field" name="email" placeholder="이메일 주소를 입력하세요.">
 				<p style="color:red">일반 사용자 권한으로 등록합니다.</p><br>
-				<textarea class="input_content" id="description" cols="100" rows="500" name="description" placeholder="자기 소개를 입력해 주세요">
-				</textarea><br>
+				<textarea class="input_content" id="description" cols="100" rows="500" name="description" placeholder="자기 소개를 입력해 주세요"></textarea><br>
 				<input type="button" id="btnRegister" class="btn_write" value="여기를 클릭하세요." onclick="SignUp()"><br><br>
 			</form>
 		</div>
@@ -217,15 +216,47 @@
    					telno.focus();
    					return false
    				}
-   				const beforeTelno = telno.value;
+   				
+   				const validateTelno = (telno) => {
+   				    // 한국 전화번호의 정규 표현식 예시: 010-1234-5678 or 010 1234 5678
+   				    const phoneRegex = /^01(?:0|1|[6-9])-(?:\d{3}|\d{4})-\d{4}$/;
+   				    return phoneRegex.test(telno);
+   				}
+   				
+				const isValidTelno = validateTelno(telno.value);
+   				
+   				if (isValidTelno) {
+   				    console.log('유효한 전화번호입니다.');
+   				} else {
+   				    console.log('유효하지 않은 전화번호입니다.');
+   				 	alert('유효하지 않은 전화번호입니다.');
+   				 	return false
+   				}
+   				
+   				/* const beforeTelno = telno.value;
    				const afterTelno = beforeTelno.replace(/\-/ig,"").replace(/\ /ig,"").trim(); // -가 있으면 ""로 대체, 공백이 있으면 ""로 대체, 문자열 좌우의 공백 없애기.
-   				telno.value = afterTelno;
+   				telno.value = afterTelno; */
    				
    				if(email.value == '') {
- 	   				alert('이메일 주소를 입력하세요');
-  	   				email.focus();
-  	   				return false
-  	   			}
+   					alert('이메일을 입력하세요');
+   					telno.focus();
+   					return false
+   				}
+   				
+   				const validateEmail = (email) => {
+   				    const emailRegex = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+   				    return emailRegex.test(email);
+   				}
+   				
+   				const isValidEmail = validateEmail(email.value);
+   				
+   				if (isValidEmail) {
+   				    console.log('유효한 이메일 주소입니다.');
+   				} else {
+   				    console.log('유효하지 않은 이메일 주소입니다.');
+   				 	alert('유효하지 않은 이메일 주소입니다.');
+   				 	return false
+   				}
    				
    				// 숙제 = 이메일 유효성 검사 로직 만들기
    				
